[package]
name = "eid-mubarak"
version = "0.1.0"
edition = "2024"
description = "A CLI tool to celebrate Eid Mubarak with ASCII video art"
license = "MIT"
repository = "https://github.com/CharafEB/Eid-Mubarak"
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
crossterm = "0.29.0"
ffmpeg-next = "8.1.0"
image = "0.25.10"

